--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>7.11.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -149,8 +155,8 @@
                     <testFailureIgnore>true</testFailureIgnore>
                     <skipTests>false</skipTests>
                     <includes>
-                        <include>**/runners/*Runner*.java</include>
-                        <!-- runners package altinda
+                        <include>**/com.runners/*Runner*.java</include>
+                        <!-- com.runners package altinda
                              calismasini istedigimiz Runner'larin
                              isimlerindeki ortak bolumu *..* yildizlar arasina yaziyoruz-->
                     </includes>
@@ -169,6 +175,7 @@
                     </includes>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
