--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,15 +1,14 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=reports/CucumberExtentReports/CucumberExtentReports.html
+extent.reporter.spark.out=target/CucumberExtentReports/ExtentReports.html
 
 #Screenshot
 screenshot.dir=screenshots/
 screenshot.rel.path=/screenshots/
-
 extent.reporter.spark.base64imagesrc=true
 
 #PDF File
-extent.reporter.pdf.start=true
-extent.reporter.pdf.out=reports/CucumberExtentReports/CucumberExtentPdfReport.pdf
+#extent.reporter.pdf.start=true
+#extent.reporter.pdf.out=target/CucumberExtentReports/ExtentPdfReport.pdf
 
-extent.reporter.excel.start=false
-extent.reporter.excel.out=reports/ExcelReport/ExtentExcel.xlsx
+#extent.reporter.excel.start=false
+#extent.reporter.excel.out=target/ExcelReport/ExtentExcel.xlsx
