--- a/src/test/resources/stage.properties
+++ b/src/test/resources/stage.properties
@@ -1,8 +1,13 @@
-browser=chrome
-url=https://wisequarter.com/
-duration=5000
-timeout:5000
-email:
-password:
-invalidEmail:
-invalidPassword:
+browser= chrome
+url= http://eaapp.somee.com/
+duration= 5000
+timeout= 5000
+UserName= admin
+Password= password
+name= Ayca Ayca
+salary= 45000
+email= denizdeniz@gmail.com
+durationWorked= 5
+
+
+
